--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
 h1,
 legend,
 h3,
-button {
-  font-family: "Staaliches", sans-serif;
+footer {
+  font-family: "Staatliches", sans-serif;
 }
 
 p,
@@ -35,40 +35,38 @@ body::before {
 }
 
 .page {
-  width: 736px;
+  width: 75rem;
   margin: auto;
 }
 
 header {
-  width: 319px;
-
-  margin-top: 74px;
+  width: 41.7rem;
+  margin: 14rem 67.8rem 5.8rem 34.5rem;
 }
 
 header h1 {
-  font-family: "Archivo", sans-serif;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
-  color: white;
-
-  margin-bottom: 24px;
+  font-weight: 400;
+  font-size: 4.8rem;
+  line-height: 6rem;
+  color: #ffffff;
+  width: 16.3rem;
 }
 
 header p {
-  font-size: 16px;
-  line-height: 26px;
-
-  color: #42d3ff;
+  font-size: 2rem;
+  line-height: 3rem;
+  font-weight: 400;
+  color: #ffffff;
+  margin-top: 1.8rem;
 }
 
 form {
-  margin-top: 38px;
+  margin-top: 3.8rem;
   background: #ffffff;
-  border-radius: 8px 8px 0 0;
-  min-height: 300px;
+  border-radius: 0.8rem 0.8rem 0 0;
+  min-height: 30rem;
 
-  padding: 64px;
+  padding: 6.4rem;
 
   display: flex;
   flex-direction: column;
@@ -77,30 +75,27 @@ form {
 
 fieldset {
   border: none;
+  margin-bottom: 3rem;
 }
 
 .fieldset-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 2.4rem;
 }
 
 fieldset legend {
   font-weight: 400;
-  font-size: 24px;
-  line-height: 34px;
+  font-size: 2.4rem;
+  line-height: 3.4rem;
 
   width: 100%;
 
-  border-bottom: 1px solid #e6e6f0;
-  padding-bottom: 16px;
-}
-
-h3 {
   color: #535971;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 34px;
+
+  border-bottom: 1px solid #e6e6f0;
+  padding-bottom: 1.6rem;
+  margin-bottom: 3.2rem;
 }
 
 .input-wrapper {
@@ -109,102 +104,122 @@ h3 {
 }
 
 .input-wrapper label {
-  font-size: 14px;
-  line-height: 24px;
-
+  font-size: 1.4rem;
+  line-height: 2.4rem;
+  font-weight: 400;
   color: #4e4958;
 
-  margin-bottom: 8px;
+  margin-bottom: 0.8rem;
 }
 
 .input-wrapper label span {
-  margin-left: 12px;
+  margin-left: 0.72rem;
 
-  font-size: 12px;
-  line-height: 20px;
+  font-size: 1.2rem;
+  line-height: 2rem;
 
-  color: #a9a7af;
-}
-
-.input-wrapper label span:hover {
-  color: #6c6a71;
+  color: #c1bccc;
 }
 
 .input-wrapper input,
 .input-wrapper textarea,
 .input-wrapper select {
-  background: #fafafc;
+  background: #ffffff;
 
   border: 1px solid #e6e6f0;
-  border-radius: 8px;
+  border-radius: 0.8rem;
 
-  height: 56px;
+  height: 5.6rem;
 
-  padding: 0 24px;
+  padding: 0 2.4rem;
 
-  font-size: 16px;
-  line-height: 26px;
+  font-size: 1.6rem;
+  line-height: 2.6rem;
 
   color: #6c6a71;
 }
 
 .input-wrapper textarea {
   padding: 0;
-  height: 168px;
+  height: 16.8rem;
 }
 
-.input-wrapper select {
-  appearance: none;
-  -webkit-appearance: none;
+.col-2 {
+  display: flex;
+  gap: 2.2rem;
+  justify-content: flex-start;
+  align-items: center;
+}
 
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
-  background-repeat: no-repeat;
-  background-position: right 24px top 50%;
+.col-2 > div:nth-child(1) {
+  width: 50%;
+}
+.col-2 > div:nth-child(2) {
+  width: 50%;
 }
 
 .col-3 {
   display: flex;
-  gap: 20px;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
 }
 
 .col-3 > div:nth-child(1) {
   width: 100%;
 }
 
+.col-3 > div:nth-child(2) {
+  margin-top: 5rem;
+}
+
+.col-3 > div:nth-child(3) {
+  margin-top: 5rem;
+}
+
+.col-3 h1 {
+  color: #535971;
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 3.4rem;
+  margin-top: 1.6rem;
+}
+
 footer {
   background: #535971;
 
-  height: 136px;
+  height: 13.6rem;
 
   display: flex;
   flex-direction: column;
 
-  padding: 40px 64px;
+  padding: 4rem 6.4rem;
 
-  margin-bottom: 100px;
+  margin-bottom: 10rem;
 
-  border-radius: 0 0 8px 8px;
+  border-radius: 0 0 0.8rem 0.8rem;
 }
 
 footer .button {
-  height: 56px;
+  height: 5.6rem;
   background: #ff5374;
   border: 0;
-  border-radius: 8px;
+  border-radius: 0.8rem;
 
-  font-family: "Archivo";
-
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 26px;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 2.6rem;
 
   color: #ffffff;
 }
 
-footer .button:hover {
-  background: #08a04c;
+input:invalid {
+  border: 1px solid #ff5374;
 }
 
-input:invalid {
-  border: 1px solid #ff1010;
+@media screen and (max-width: 768px) {
+  header {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
